[gd_scene load_steps=2 format=3 uid="uid://bld77tva3hsap"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_ood2h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ood2h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="UpdatesButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Updates"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpdatesButton" to="." method="_on_updates_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
